@@ -48,6 +48,8 @@ JumpToLineAction.label=Resume At Li&ne
 GlobalJumpToLineAction.label=Resume At Li&ne (C/C++)
 ShowFullPathsAction.label=Show Full &Paths
 ShowFullPathsAction.tooltip=Show Full Paths
+AddWatchpoint.label=Add Watchpoint (C/C++)...
+AddWatchpoint.tooltip=Add Watchpoint (C/C++)
 
 AddGlobalsAction.label=Add Global Variables...
 AddGlobalsAction.tooltip=Add Global Variables
